--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -683,8 +683,7 @@ Les courbes montrent que les contraintes de bénéfice minimal acceptables sont 
 \subsubsection{Conclusion}
 Au vu des différents résultats obtenus pour les 3 cas, nous concluons que la solution à retenir est celle qui minimise la machine 3 ou la somme des temps des deux machines (ces deux solutions étant équivalentes).  La solution qui minimise uniquement l'usage de la machine 5 est à rejeter car elle entraine une utilisation excessive de la machine 3. 
 \section{Point de vue du Responsable d'entreprise}
-Nous avons défini la matrice de gain suivante: \newline
-
+Nous avons défini la matrice de gain suivante:\begin{center}
 \begin{minipage}{0.45\textwidth}
 \bordermatrix{
 				  ~ & $Z_{comptable}$ & $Z_{atelier}$ & $Z_{stock}$ & $Z_{commercial}$ & $Z_{personnel}$ & $Z_{personnel3}$ & $Z_{personnel5}$ \cr
@@ -695,7 +694,9 @@ Nous avons défini la matrice de gain suivante: \newline
                   $X^{*}_{personnel}$ & 5256    &275   &1377    &75     &2183    &1179   &1004 \cr
                   $X^{*}_{personnel3}$ & 5256    &275   &1377   &75     &2183    &1179   &1004 \cr
                   $X^{*}_{personnel5}$ & 5256    &308   &1650    &151   &2893    &2108    &785 \cr}
-\end{minipage}\newline
+\end{minipage}
+\end{center}
+\newline
 \\
 Cette matrice représente les objectifs de chacun des cadres (en colonnes) et des solutions optimales calculées en prenant les objectif séparément (en lignes). Les colonnes indiquent (de gauche à droite),le bénéfice, la production totale, le nombre de produits et matières premières en stock, l'écart entre la production des 2 gammes de produits, le temps d'utilisation total des machines 3 et 5, le temps d'utilisation de la machine 3 et enfin le temps d'utilisation de la machine 5.
 
